--- a/Divide&Conquer/appendix/code_max_subarray_dc.tex
+++ b/Divide&Conquer/appendix/code_max_subarray_dc.tex
@@ -165,13 +165,14 @@ def _run_cli() -> None:
     """Command-line interface for maximum subarray problem."""
     parser = argparse.ArgumentParser(
         description="Maximum subarray solver",
-        epilog="Example: python -m DivideConquer.max_subarray_dc --values -2,1,-3,4,-1,2,1,-5,4",
+        epilog='Example: python max_subarray_dc.py --values="-2,1,-3,4,-1,2,1,-5,4"',
         formatter_class=argparse.RawDescriptionHelpFormatter,
     )
     parser.add_argument(
         "--values",
         default="",
-        help="Comma-separated daily profit/loss values.",
+        type=str,
+        help="Comma-separated daily profit/loss values (use --values=\"-2,1,-3\" format for negative numbers).",
     )
     parser.add_argument(
         "--use-kadane",
